packages/jsii/test/negatives/neg.method-name.1.ts
///!MATCH_ERROR: 'METHOD' must use camelCase

export class MyClass {
    METHOD() {
        return "hi";
    }
}
